Fix overflow

--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     background-image: url(images/bg-img-stars.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .container {
